@@ -208,6 +208,11 @@ https://github.com/networkupstools/nut/milestone/8
  - Clarified documentation in codebase according to end-user feedback [#1721,
    #1750 and others over time]
 
+ - Several fixes for `upsmon` behavior [#1761, #1680...], including new
+   ability to configure default POWERDOWNFLAG location -- packagers are
+   encouraged to pick optimal location for their distributions (which
+   remains mounted at least read-only late in shutdown) [#529]
+
  - Further revision of public headers delivered by NUT was done, particularly
    to address lack of common data types (`size_t`, `ssize_t`, `uint16_t`,
    `time_t` etc.) in third-party client code that earlier sufficed to only
